name:                bank-simulator
version:             0.0.1
synopsis:            Simulates a bank.
description:         Please see README.md
homepage:            https://github.com/excaliburzero/bank-simulator
license:             MIT
license-file:        LICENSE
author:              Christopher Wells
maintainer:          cwellsny@nycap.rr.com
copyright:           2016 Christopher Wells
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                       Accounts
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bank-simulator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bank-simulator
  default-language:    Haskell2010

test-suite bank-simulator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bank-simulator
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/bank-simulator
